--- a/views/partials/html/login.html
+++ b/views/partials/html/login.html
@@ -1,4 +1,10 @@
-<div class="container">
+<style>
+	body {
+		background-image: url('http://i.imgur.com/d56w4SB.png');
+		background-repeat: no-repeat;
+	}
+</style>
+<div class="container" style="margin-top: 180px;">
 	<form class="col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2" method='post' onkeypress="enterpress(event)">
 		<div class="form-group">
 			<label for="username">Namn</label>
