--- a/views/partials/teacher/home.html
+++ b/views/partials/teacher/home.html
@@ -1,9 +1,18 @@
 <div class="container">
-	<div class="rows col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
-		<a href="class" class="btn btn-default">Klasser</a>
-		<a href="create" class="btn btn-default">Skapa Session</a>
-		<select class="form-control">
-			<option selected id="first">Sessioner</option>
-		</select>
+	<div class="rows col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+		<div class="input-group">
+			<a href="class" class="form-control">Klasser</a>
+        	<div class="input-group-addon"><i class="fa fa-coffee"></i></div>
+		</div>
+		
+		<div class="input-group">
+			<a href="create" class="form-control">Skapa Session</a>
+        	<div class="input-group-addon"><i class="fa fa-plus"></i></div>
+		</div>
+		<div class="input-group">
+			<header class="form-control">Sessioner</header>
+        	<div class="input-group-addon"><i class="fa fa-level-down"></i></div>
+		</div>
+		<ul clicked="0"></ul>
 	</div>
 </div>
